--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
 		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/gif.js": "^0.2.5",
 		"autoprefixer": "^10.4.21",
 		"bits-ui": "1.3.12",
 		"clsx": "^2.1.1",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-svelte": "^3.1.0",
+		"gif.js": "^0.2.0",
+		"gifuct-js": "^2.1.2",
 		"globals": "^16.0.0",
 		"isomorphic-dompurify": "^2.22.0",
 		"jsrepo": "^1.44.2",
